<resources>
    <string name="app_name">PedidApp</string>
    <string name="login">Iniciar Sesion</string>
    <string name="description">Ingresa con tu correo y contraseña</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="register_here">Registrate aqui</string>
    <string name="version">Version 1.0</string>
    <string name="delivery_app">Delivery App</string>
    <string name="register">Registrarse</string>
    <string name="complete_data">Completa los datos</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email_register">Correo Electronico</string>
    <string name="phone_register">Telefono (10 Digitos)</string>
    <string name="password_register">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="btn_register">Registrarse</string>
    <string name="back_to_login">Volver al login</string>
    <string name="todo">TODO</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_saltar_paso">Saltar este paso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_select_rol">Seleccionar Rol</string>
    <string name="btn_edit_profile">Editar Perfil</string>
    <string name="btn_update">Actualizar</string>
    <string name="tvUpdate">Actualizar Datos de Usuario</string>
</resources>