<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/indigo_daisy"
            android:textSize="40sp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/roboto_regular"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"/>

        <EditText
            android:id="@+id/edtemaillogin"
            android:drawableStart="@drawable/ic_login_email"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtpasswordlogin"
            android:drawableStart="@drawable/ic_login_pass"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/green"
            android:background="@drawable/rounded_button"/>

        <ImageView
            android:id="@+id/go_to_register"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_forward"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/register_here"
            android:layout_marginBottom="20dp"
            android:textColor="@color/blue"/>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>