<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/indigo_daisy"
            android:textSize="40sp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_data"
            android:fontFamily="@font/roboto_regular"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"/>

        <EditText
            android:id="@+id/edtnamegister"
            android:drawableStart="@drawable/ic_register_person"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:inputType="text"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom" />

        <EditText
            android:id="@+id/edtlastnameregister"
            android:drawableStart="@drawable/ic_register_person"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/last_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom" />

        <EditText
            android:id="@+id/edtemailregister"
            android:drawableStart="@drawable/ic_login_email"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_register"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom" />

        <EditText
            android:id="@+id/edtphoneregister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_register_phone"
            android:drawablePadding="10dp"
            android:maxLength="10"
            android:hint="@string/phone_register"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom" />

        <EditText
            android:id="@+id/edtpasswordregister"
            android:drawableStart="@drawable/ic_login_pass"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_register"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom" />

        <EditText
            android:id="@+id/edtconfirmpassword"
            android:drawableStart="@drawable/ic_login_pass"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/green"
            android:background="@drawable/rounded_button"/>


            <ImageView
                android:id="@+id/go_to_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/back_to_login"
                android:layout_marginBottom="20dp"
                android:textColor="@color/blue"/>

        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>